--- a/src/main/resources/templates/layouts/basic.html
+++ b/src/main/resources/templates/layouts/basic.html
@@ -8,15 +8,19 @@
   <meta name="author" content="" />
   <title>Simple Sidebar - Start Bootstrap Template</title>
 
-  <!-- Core theme CSS (includes Bootstrap)-->
+  <!-- 전체페이지에서 공통을 사용되는 css인경우 :  Core theme CSS (includes Bootstrap) -->
   <link href="css/styles.css"
         th:href="@{/css/styles.css}" rel="stylesheet" />
+
+  <!-- css import : 특정 페이지에서 사용되는 css인경우 -->
+  <th:block layout:fragment="mystyle"></th:block>
+
 </head>
 
 <body>
-<body>
 <div class="d-flex" id="wrapper">
   <!-- Sidebar-->
+  <div th:replace="~{fragments/header::sidebar}"></div>
   <div class="border-end bg-white" id="sidebar-wrapper">
     <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
     <div class="list-group list-group-flush">
@@ -28,9 +32,12 @@
       <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
     </div>
   </div>
+
   <!-- Page content wrapper-->
   <div id="page-content-wrapper">
+
     <!-- Top navigation-->
+    <div th:replace="~{fragments/header::navbar}"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
       <div class="container-fluid">
         <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
@@ -52,27 +59,27 @@
         </div>
       </div>
     </nav>
-    <!-- Page content-->
-    <div class="container-fluid">
-      <h1 class="mt-4">Thymeleaf Template Simple Sidebar</h1>
-      <h3 class="mt-4">Thymeleaf Template</h3>
-      <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-      <p>
-        Make sure to keep all page content within the
-        <code>#page-content-wrapper</code>
-        . The top navbar is optional, and just for demonstration. Just create an element with the
-        <code>#sidebarToggle</code>
-        ID which will toggle the menu when clicked.
-      </p>
+
+    <!-- Page content: 바뀌는 콘텐츠 영역을 불러오기 -->
+    <div class="container-fluid" layout:fragment="content" >
+
     </div>
+
+
   </div>
 </div>
 
+
+<!-- 페이지 전체 공통으로 사용되는 javascript -->
 <!-- Bootstrap core JS-->
 <script src="js/bootstrap.bundle.min.js"
         th:src="@{/js/bootstrap.bundle.min.js}"></script>
 <!-- Core theme JS-->
 <script src="js/scripts.js"
         th:src="@{/js/scripts.js}"></script>
+
+<!-- javascript import : 특정 페이지에서 사용되는 javascript인경우 -->
+<th:block layout:fragment="myscript"></th:block>
+
 </body>
 </html>
