--- a/src/main/resources/templates/layouts/basic.html
+++ b/src/main/resources/templates/layouts/basic.html
@@ -76,9 +76,9 @@
 
 <!-- 페이지 전체 공통으로 사용되는 javascript -->
 <!-- Bootstrap core JS-->
-<!-- Core theme JS-->
-<!--<script src="js/bootstrap.bundle.min.js"-->
-<!--        th:src="@{/js/bootstrap.bundle.min.js}"></script>-->
+<!-- Core theme JS : 부트스트램의 함수를 이용해서  modal 호출 스크립트 -->
+<script src="js/bootstrap.bundle.min.js"
+        th:src="@{/js/bootstrap.bundle.min.js}"></script>
 <script src="js/scripts.js"
         th:src="@{/js/scripts.js}"></script>
 
