--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -9,18 +9,26 @@
 
     <div class="card">
       <div class="card-header">
-        Board Register
+        Board Read
       </div>
 
       <div class="card-body m-4">
         <form action="/board/register" method="post" >
+          <!-- 1. 글 제목 -->
+          <div class="form-floating mb-3">
+
+            <input type="text" 	class="form-control"
+                   id="bno"
+                   name="bno"  th:value="${dto.bno}" readonly  >
+            <label for="title" >Bno</label>
+          </div>
 
           <!-- 1. 글 제목 -->
           <div class="form-floating mb-3">
 
             <input type="text" 	class="form-control"
                    id="title"
-                   name="title"
+                   name="title"   th:value="${dto.title}" readonly
                    placeholder="2자이상 100이내로 작성하세요">
             <label for="title" >Title</label>
           </div>
@@ -32,24 +40,25 @@
                       id="content"
                       name="content"
                       rows="10"
-                       ></textarea>
+                      readonly
+                       >[[${dto.content}]]</textarea>
             <label for="content" >Comments</label>
 
           </div>
           <!-- 3. 게시글 작성자 -->
           <div class="form-floating mb-3">
             <input type="text" class="form-control"
-                   placeholder="반드시 내용이 입력되어야 합니다."
                    id="writer"
-                   name="writer">
+                   name="writer" th:value="${dto.writer}" readonly
+                   placeholder="반드시 내용이 입력되어야 합니다." >
             <label for="writer">Writer</label>
           </div>
 
           <!-- 3. 글 보내기 버튼 -->
           <div class="my-4">
             <div class="float-end">
-            <button type="submit" class="btn btn-primary submitBtn">Submit</button>
-            <button type="reset" class="btn btn-secondary" >Reset</button>
+            <button type="button" class="btn btn-primary submitBtn">List</button>
+            <button type="button" class="btn btn-secondary" >Modify</button>
             </div>
           </div>
 
@@ -63,20 +72,12 @@
 <!-- 현재 페이지에서만 사용하는 css 정의 -->
 <style layout:fragment="mystyle" th:inline="css">
 
+
 </style>
 
 <!-- 현재 페이지에서만 사용하는 css 정의 -->
 <script layout:fragment="myscript" th:inline="javascript">
-  const errors = [[${errors}]]
-  console.log('errors',errors);
 
-  let errMessage = "";
-  if (errors) {// 서버로 부터 응답 에러 메시지 처리
-    for (let i=0; i<errors.length; i++){
-      errMessage += `${errors[i].field}은 ${errors[i].code}\n`;
-    }
-    alert(errMessage)
-  }
 
   // form 하위요소 객체에 대한 변수 선언
   const formObj =  document.querySelector('form')
@@ -88,21 +89,6 @@
   document.querySelector('.submitBtn').addEventListener('click', function(e){
     e.stopPropagation();
     e.preventDefault(); // submit()기본 기능 제거
-
-    if (title.value.length < 1 || title.value == ""){
-      alert("글제목이 비어 있습니다.");
-      title.focus();
-      return;
-    }
-    if ( title.value.length < 3 || title.value.length > 100) {
-        alert("3자 이상 100자 이내에서만 작성 가능합니다.");
-        title.focus();
-        return;
-    }
-
-
-    // 값에 이상이 없으면 서버에 전송
-    formObj.submit();
 
 
   });
