--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -6,9 +6,13 @@
 
 <!-- 현재 페이지에서만 사용하는 컨텐츠(내용) 정의 -->
 <div layout:fragment="content" class="p-3">
+
+
 <!--  <div th:text="${pageRequestDTO}"></div>-->
 <!--  <div th:text="${responseDTO.dtoList}"></div>-->
 <!--  <div th:text="${pageRequestDTO.getLink()}"></div>-->
+<!--  <div th:text="${responseDTO.star}"></div>-->
+  <div th:text="${responseDTO.end+1}"></div>
 
   <hr>
   <!-- 검색 키워드 -->
@@ -92,7 +96,7 @@
           <nav aria-label="...">
             <ul class="pagination">
               <li class="page-item " th:if="${responseDTO.prev}">
-                <a class="page-link" th:data-num="${responseDTO.star-1}">이전</a>
+                <a class="page-link" th:data-num="${responseDTO.start-1}">이전</a>
               </li>
 
               <th:block th:each="i : ${#numbers.sequence(responseDTO.start,responseDTO.end)}">
@@ -104,6 +108,8 @@
               <li class="page-item" th:if="${responseDTO.next}">
                 <a class="page-link"  th:data-num="${responseDTO.end+1}">다음</a>
               </li>
+
+
 
             </ul>
           </nav>
@@ -173,6 +179,7 @@
 
 
 
+
   // 1. 페이징 번호 클릭시 처리하는 함수
   document.querySelector('.pagination').addEventListener('click', function(e) {
     e.preventDefault(); // 기본 이벤트 제거
@@ -184,7 +191,8 @@
     const num = target.getAttribute('data-num');
 
     // 검색 기능 폼(form)에서 전송
-    const formObj = document.querySelector('#searchForm');//const formObj = document.querySelector('form');
+    //const formObj = document.querySelector('#searchForm');
+    const formObj = document.querySelector('form');
     formObj.innerHTML += `<input type='hidden' name='page' value='${num}'>`
     formObj.submit();
 
