--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -135,13 +135,37 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Register</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary registerBtn">Register</button>
+          <button type="button" class="btn btn-secondary closeRegisterBtn">Close</button>
         </div>
       </div>
     </div>
   </div>
 <!--  end reply register modal-->
+
+  <!-- reply read and modify modal -->
+  <div class="modal modifyModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title replyHeader"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="input-group mb-3">
+            <span class="input-group-text">Reply Text</span>
+            <input type="text" class="form-control modifyText"/>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-info modifyBtn">Modify</button>
+          <button type="button" class="btn btn-primary removeBtn">Remove</button>
+          <button type="button" class="btn btn-secondary closeModifyBtn">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--  end reply register modal-->
 
 
   <!-- message modal -->
@@ -180,7 +204,9 @@
 
 <!-- 현재 페이지에서만 사용하는 css 정의 -->
 <style layout:fragment="mystyle" th:inline="css">
-
+  .mylink {
+    cursor: pointer;
+  }
 
 </style>
 
@@ -189,7 +215,7 @@
 
   //서버로 부터 응답받은 메시지: db처리한 후 결과 값 전송한 객체
   const result = [[${result}]]
-  const bno = [[${dto.bno}]]  // 전역 변수
+  const bno = [[${dto.bno}]]  // 전역 변수: 댓글에 대한 게시글 번호
 
   /*
   //const reply_bno = document.querySelector('#bno').value;
@@ -248,10 +274,13 @@
         str +=
         `
           <li class="list-group-item d-flex replyItem">
-          <span class="col-2">${dto.rno}</span>
-          <span class="col-6" data-rno="${dto.rno}">${dto.replyText}</span>
-          <span class="col-2">${dto.replyer}</span>
-          <span class="col-2">${dto.regDate}</span>
+            <span class="col-2">${dto.rno}</span>
+            <span class="col-6 mylink"
+                  data-rno="${dto.rno}">
+                  ${dto.replyText}
+            </span>
+            <span class="col-2">${dto.replyer}</span>
+            <span class="col-2">${dto.regDate}</span>
           </li>
         `
       }// end for
@@ -282,13 +311,11 @@
 
 
 
-  // 5. 댓글 등록 모달
-
   // ----------------- //
-  // 6. 이벤트 처리
+  // 5. 이벤트 처리
   // ----------------- //
 
-  // 6-1. 페이지 번호 클릭
+  // 5-1. 페이지 번호 클릭
   replyPaging.addEventListener('click', function(e){
     e.preventDefault();
     e.stopPropagation();
@@ -309,19 +336,96 @@
 
 
 
-
-
-
-
-
-
-
-  //  댓글 등록 모달창
+  // 5-2 댓글 등록 모달창
   const registerModal = new bootstrap.Modal(document.querySelector('.registerModal'));
+
+  const registerBtn =  document.querySelector('.registerBtn');
+  const closeRegisterBtn = document.querySelector('.closeRegisterBtn');
+
+  const replyText = document.querySelector(".replyText");
+  const replyer = document.querySelector(".replyer");
+
   document.querySelector('.addReplyBtn')
           .addEventListener('click', function(e){  // addReply 버튼 클릭을 처리하는 이벤트 핸들러
-
     registerModal.show()
+  });
+
+  registerBtn.addEventListener('click', function(e){      // 댓글 모달 창에 있는  register 버튼
+      console.log('register click')
+
+      // 전송할 data를 JSON객체로 선언
+      const replyObj = {
+        bno: bno,                       // 댓글에 대한 게시글 번호
+        replyText: replyText.value,     // 댓글 내용
+        replyer: replyer.value          // 댓글 작성자
+      }
+      console.log("전송할 JSON:", replyObj);
+
+      // 비동기 처리방식으로 data 서버에 보내기
+      addReply(replyObj)
+            .then( result => {
+              console.log("response data:",result)
+              console.log("rno:",result.rno)
+
+              alert(result.rno)
+
+              registerModal.hide(); // 모달 창 닫기
+              replyText.value='';   // 댓글 내용 clear
+              replyer.value='';     // 댓글 작성자 clear
+
+              // 댓글 등록한 후 댓글 List호출
+              printReplies(1,10, true)// true설정하면 마지막 페이지 호출
+
+            })
+            .catch(e => alert(e))
+
+
+  });
+  closeRegisterBtn.addEventListener('click', function(e){ // 댓글 모달 창에 있는  clsoe 버튼
+    registerModal.hide()
+  });
+
+  // 5-3. 댓글 조회 및 수정
+  const modifyModal = new bootstrap.Modal(document.querySelector('.modifyModal'));
+  const replyList = document.querySelector('.replyList');
+
+  const replyHeader = document.querySelector('.replyHeader'); // 모달창의 제목
+  const modifyText = document.querySelector('.modifyText');   // 댓글 내용
+
+  const modifyBtn = document.querySelector('.modifyBtn');
+  const removeBtn = document.querySelector('.removeBtn');
+  const closeModifyBtn = document.querySelector('.closeModifyBtn');
+
+  replyList.addEventListener('click', function(e){
+    e.stopPropagation();
+
+    console.log(e)
+    const target = e.target;
+    if (!target || target.tagName != 'SPAN'){
+      return;
+    }
+
+    // <SPAN>태그일 경우만 처리
+    // 현재 클릭한 태그 요소의 댓글 번호 (rno)값 추출
+    const rno = target.getAttribute("data-rno");
+    if (!rno){// 값이 없으면, 비어 있으면
+      return
+    }
+
+    console.log('span click: rno =>', rno);
+
+    // 댓글 번호가 있으면 처리
+    getReply(rno)
+        .then(reply => {
+          console.log(reply);
+
+          replyHeader.innerHTML = reply.rno+"번 댓글";
+          modifyText.value = reply.replyText;
+          modifyModal.show();  // modify 모달창 표시
+        })
+        .catch(e => alert('error'));
+
+
   });
 
 
