--- a/src/main/resources/templates/layouts/basic.html
+++ b/src/main/resources/templates/layouts/basic.html
@@ -20,14 +20,69 @@
 </head>
 
 <body>
+<!-- navigation bar-->
+<div class=" fixed-top">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">MyShop</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page"
+               href="/" th:href="@{/}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/item/new"
+                                th:href="@{/admin/item/new}">상품등록</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/items"
+                                th:href="@{/admin/items}">상품관리</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cart"
+                                th:href="@{/cart}">장바구니</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/orders"
+                                th:href="@{/orders}">구매이력</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/members/login"
+                                th:href="@{/members/login}">로그인</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/members/logout"
+                                th:href="@{/members/logout}">로그아웃</a>
+          </li>
+
+        </ul>
+        <!--  검색  키워드 폼
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+      -->
+    </div>
+  </nav>
+</div>
+
+
+
 <div class="d-flex" id="wrapper">
-  <!-- Sidebar -->
+
+  <!-- Sidebar: 왼쪽 메뉴바 -->
   <!-- <div th:replace="~{fragments/header::sidebar}"></div> -->
   <div class="border-end bg-white" id="sidebar-wrapper">
     <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
     <div class="list-group list-group-flush">
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dashboard</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/members}"   href="/members">회원관리</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/board/list}" href="/board/list">게시판</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
