- member register Test

--- a/src/main/resources/templates/members/memberForm.html
+++ b/src/main/resources/templates/members/memberForm.html
@@ -99,6 +99,16 @@
     console.log("errorMessage:",errorMessage);
   }
 
+
+
+
+  <!-- jQuery 방식 -->
+  <!--
+  $(function(){
+       console.log('jQuery Ok...')
+       $('#emailCheck').text(errorMessage);
+  });
+  -->
 </script>
 
 </html>
