--- a/src/main/resources/templates/members/memberForm.html
+++ b/src/main/resources/templates/members/memberForm.html
@@ -68,7 +68,9 @@
         <button type="reset" class="btn btn-secondary" >초기화</button>
       </div>
       <!-- CSRF토큰: Cross-site Request Forgery(크로스 사이트간 요청 위조)
-      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
+      <input type="hidden"
+             th:name=${_csrf.parameterName}"
+             th:value="${_csrf.token}" >  -->
     </form>
   </div>
 
