--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout" >
 <head>
   <meta charset="utf-8" />
@@ -14,20 +15,63 @@
 </head>
 
 <body>
-<body>
+
 <div class="d-flex" id="wrapper">
-  <!-- Sidebar-->
-  <div class="border-end bg-white" id="sidebar-wrapper">
-    <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
-    <div class="list-group list-group-flush">
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dashboard</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
-    </div>
+
+  <!-- navigation bar-->
+  <div class=" fixed-top">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">MyShop</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" th:id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page"
+                 href="/" th:href="@{/}">Home</a>
+            </li>
+            <!--          sec:authorize="hasAnyAuthority('ROLE_USER')"-->
+            <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')" >
+              <a class="nav-link" href="/admin/item/new"
+                 th:href="@{/admin/item/new}">상품등록</a>
+            </li>
+            <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')" >
+              <a class="nav-link" href="/admin/items"
+                 th:href="@{/admin/items}">상품관리</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link" href="/cart"
+                 th:href="@{/cart}">장바구니</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link" href="/orders"
+                 th:href="@{/orders}">구매이력</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAnonymous()">
+              <a class="nav-link" href="/members/login"
+                 th:href="@{/members/login}">로그인</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link" href="/members/logout"
+                 th:href="@{/logout}">로그아웃</a>
+            </li>
+
+          </ul>
+          <!--  검색  키워드 폼
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+        -->
+        </div>
+    </nav>
   </div>
+
+
   <!-- Page content wrapper-->
   <div id="page-content-wrapper">
     <!-- Top navigation-->
@@ -66,7 +110,18 @@
       </p>
     </div>
   </div>
+
+
 </div>
+
+<!-- Page footer wrapper-->
+<div th:replace="~{fragments/footer::footer}">
+
+</div>
+
+
+
+
 
 <!-- Bootstrap core JS-->
 <script src="js/bootstrap.bundle.min.js"
