--- a/src/main/resources/templates/layouts/basic.html
+++ b/src/main/resources/templates/layouts/basic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout" >
 <head>
   <meta charset="utf-8" />
@@ -29,35 +30,36 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" th:id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page"
                href="/" th:href="@{/}">Home</a>
           </li>
-          <li class="nav-item">
+<!--          sec:authorize="hasAnyAuthority('ROLE_USER')"-->
+          <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')" >
             <a class="nav-link" href="/admin/item/new"
                                 th:href="@{/admin/item/new}">상품등록</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')" >
             <a class="nav-link" href="/admin/items"
                                 th:href="@{/admin/items}">상품관리</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" sec:authorize="isAuthenticated()">
             <a class="nav-link" href="/cart"
                                 th:href="@{/cart}">장바구니</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" sec:authorize="isAuthenticated()">
             <a class="nav-link" href="/orders"
                                 th:href="@{/orders}">구매이력</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" sec:authorize="isAnonymous()">
             <a class="nav-link" href="/members/login"
                                 th:href="@{/members/login}">로그인</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" sec:authorize="isAuthenticated()">
             <a class="nav-link" href="/members/logout"
-                                th:href="@{/members/logout}">로그아웃</a>
+                                th:href="@{/logout}">로그아웃</a>
           </li>
 
         </ul>
@@ -78,17 +80,6 @@
 
   <!-- Sidebar: 왼쪽 메뉴바 -->
   <!-- <div th:replace="~{fragments/header::sidebar}"></div> -->
-  <div class="border-end bg-white" id="sidebar-wrapper">
-    <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
-    <div class="list-group list-group-flush">
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/members}"   href="/members">회원관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/board/list}" href="/board/list">게시판</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
-    </div>
-  </div>
 
 
   <!-- Page content wrapper-->
@@ -128,6 +119,7 @@
   </div>
 </div>
 
+<div th:replace="~{fragments/footer::footer}"></div>
 
 <!-- 페이지 전체 공통으로 사용되는 javascript -->
 <!-- Bootstrap core JS-->
