--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/basic}"    >
 
@@ -12,7 +13,7 @@
 <!--  <div th:text="${responseDTO.dtoList}"></div>-->
 <!--  <div th:text="${pageRequestDTO.getLink()}"></div>-->
 <!--  <div th:text="${responseDTO.star}"></div>-->
-  <div th:text="${responseDTO.end+1}"></div>
+<!--  <div th:text="${responseDTO.end+1}"></div>-->
 
   <hr>
   <!-- 검색 키워드 -->
@@ -62,6 +63,11 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">Board List</h5>
+
+        <!-- 로그인 상태일 경우만 글쓰기 버튼 활성화
+        <div sec:authorize="isAuthenticated()">
+          <a th:href="@{/board/register}" class="btn btn-success">글쓰기</a>
+        </div>   -->
 
         <!-- 게시글 List -->
         <table class="table">
