--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -65,9 +65,10 @@
         <h5 class="card-title">Board List</h5>
 
         <!-- 로그인 상태일 경우만 글쓰기 버튼 활성화
-        <div sec:authorize="isAuthenticated()">
+        <div sec:authorize="isAuthenticated()"> -->
+        <div>
           <a th:href="@{/board/register}" class="btn btn-success">글쓰기</a>
-        </div>   -->
+        </div>
 
         <!-- 게시글 List -->
         <table class="table">
