--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/basic}"    >
 
@@ -70,13 +71,17 @@
           </div>
 
 
-          <!-- 4. List, Modify 버튼-->
-          <div class="my-4">
+          <!-- 4. List, Modify 버튼: 로그인 상태 정보 객체(#authentication.principal) -->
+          <div class="my-4" th:with="user=${#authentication.principal}">
             <!-- 현 글번호에 대한 페이징 정보를 넘겨받아서 list요청시 페이징 정보와 같이 요청하면 현재 글번호가 해당되는 list페이지 추출됨 -->
             <div class="float-end" th:with="link=${pageRequestDTO.getLink()}">
+
               <a th:href="|@{/board/list}?${link}|">
                 <button type="button" class="btn btn-primary ">List</button></a>
-              <a th:href="|@{/board/modify(bno=${dto.bno})}&${link}|">
+
+              <!-- 게시글 작성자(dto.writer)와 로그인 인증자와 동일하면 -->
+              <a  th:if="${user != null && user.name == dto.writer}"
+                  th:href="|@{/board/modify(bno=${dto.bno})}&${link}|">
                 <button type="button" class="btn btn-secondary" >Modify</button></a>
             </div>
           </div>
