--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/basic}"    >
 
@@ -41,7 +42,13 @@
             <input type="text" class="form-control"
                    placeholder="반드시 내용이 입력되어야 합니다."
                    id="writer"
-                   name="writer">
+                   name="writer"
+                   th:value="${#authentication.principal.name}" readonly
+                   /> <!-- 로그인 상태일 경우만 #authentication객체변수 적용  -->
+
+
+
+
             <label for="writer">Writer</label>
           </div>
 
